<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingStart="@dimen/marginStart10"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/footballer_name"/>
    <EditText
        android:id="@+id/nameEdit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/enter_name_here"
        android:inputType="text"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/footballer_surname"
        android:layout_marginTop="@dimen/marginTop30"/>
    <EditText
        android:id="@+id/surnameEdit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/enter_surname_here"
        android:inputType="text"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/footballer_age"
        android:layout_marginTop="@dimen/marginTop30"/>
    <EditText
        android:id="@+id/ageEdit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/enter_age_here"
        android:inputType="number"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/footballer_team_name"
        android:layout_marginTop="@dimen/marginTop30"/>
    <EditText
        android:id="@+id/teamNameEdit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/enter_team_name_here"
        android:inputType="text"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="@dimen/marginTop30">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/select_footballer_position" />
        <Spinner
            android:id="@+id/positionSpinnerEdit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/marginStart10"/>
    </LinearLayout>



    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="@dimen/marginTop30">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/is_footballer_available_for_playing" />
        <CheckBox
            android:id="@+id/availableCheckBoxEdit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
    </LinearLayout>

    <Button
        android:id="@+id/editFootballerButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/edit_footballer"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/margintop20"/>


</LinearLayout>